Some messages are edited.